--- a/.github/workflows/terraform-flow.yml
+++ b/.github/workflows/terraform-flow.yml
@@ -1,6 +1,9 @@
 name: "Terraform"
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+    paths:
+    - terraform/**
 
 
 
@@ -34,13 +37,13 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        if: github.event_name == 'pull_request'
+        # if: github.event_name == 'pull_request'
         run: terraform plan -no-color -input=false
         continue-on-error: true
 
       - name: Update Pull Request
         uses: actions/github-script@v6
-        if: github.event_name == 'pull_request'
+        # if: github.event_name == 'pull_request'
         env:
           PLAN: ${{ steps.plan.outputs.stdout }}
         with:
