--- a/.github/workflows/terraform-flow.yml
+++ b/.github/workflows/terraform-flow.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: terraform
+        working-directory: ./terraform
     permissions:
       pull-requests: write
     steps:
