--- a/.github/workflows/terraform-flow.yml
+++ b/.github/workflows/terraform-flow.yml
@@ -74,6 +74,6 @@ jobs:
       #   run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
         working-directory: ${{ env.working-directory }}
