--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           context: .
           file: app/Dockerfile
-          tags: $({ secrets.DOCKERHUB_USERNAME })/liatrio_exercise:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
