--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: app
           file: app/Dockerfile
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
