--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -26,4 +26,5 @@ jobs:
         with:
           context: app
           file: app/Dockerfile
+          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
