--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -26,9 +26,10 @@ jobs:
           file: app/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
-          
+
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
