--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -1,9 +1,6 @@
-name: "Terraform"
-
+name: "Liatrio Exercise"
 on: 
   workflow_dispatch:
-
-
 
 jobs:
   terraform:
@@ -20,7 +17,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          # terraform_version: 0.13.0:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
@@ -43,9 +39,14 @@ jobs:
         run: terraform apply -auto-approve -input=false
         working-directory: ${{ env.working-directory }}
 
+      - name: Set Kube context
+        run : |
+          aws eks update-kubeconfig --name $(terraform output -raw cluster_name) --region $(terraform output -raw region)
 
-  build:
+
+  python_build:
     runs-on: ubuntu-latest
+    needs: terraform
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
