--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -42,6 +42,7 @@ jobs:
 
       - name: Set Kube context
         run : |
+          ${{ steps.plan.outputs.stdout }}
           aws eks update-kubeconfig --name $(terraform output -raw cluster_name) --region $(terraform output -raw region)
 
 
