--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_wrapper: false
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
@@ -39,11 +38,15 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve -input=false
         working-directory: ${{ env.working-directory }}
+        with: 
+          terraform_wrapper: false
+
 
       - name: Set Kube context
         run : |
-          ${{ steps.plan.outputs.stdout }}
-          aws eks update-kubeconfig --name $(terraform output -raw cluster_name) --region $(terraform output -raw region)
+          cluster_name=$(terraform output cluster_name)
+          cluster_region=$(terraform output region)
+          aws eks update-kubeconfig --name $cluster_name --region $cluster_region
 
 
   python_build:
