--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Set Kube context
         run : |
           cluster_name=${{ steps.tf-outputs.outputs.cluster_name }}
+          cluster_region=${{ steps.tf-outputs.outputs.cluster_region }}
           aws eks update-kubeconfig --name $cluster_name --region $cluster_region
 
 
