--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,4 +22,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: execute script
+        env:
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
         run: python get_outputs.py
