--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -25,3 +25,5 @@ jobs:
         env:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
         run: python get_outputs.py
+      - name: print
+        run: echo ${{ env.CLUSTER_NAME }}
