--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -18,8 +18,6 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          terraform_wrapper: false
-
 
       - name: Terraform Init
         id: init
@@ -42,8 +40,33 @@ jobs:
         run: terraform apply -auto-approve -input=false
         working-directory: ${{ env.working-directory }}
 
+  python_tf_outputs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v2
 
+      - name: setup python
+        uses: actions/setup-python@v4
+        with: 
+          python-version: '3.8'
 
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: execute script
+        env:
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+        run: python get_outputs.py
+
+  kube_context:
+    runs-on: ubuntu-latest
+    steps:
+      - name: set kube context
+        run: |
+          aws eks update-kubeconfig --name $(CLUSTER_NAME) --region $(CLUSTER_REGION)
 
   python_build:
     runs-on: ubuntu-latest
