--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -67,6 +67,9 @@ jobs:
     needs: terraform
     steps:
       - name: set kube context
+        env: 
+          CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
+          CLUSTER_REGION: ${{ env.CLUSTER_REGION }}
         run: |
           aws eks update-kubeconfig --name $(CLUSTER_NAME) --region $(CLUSTER_REGION)
 
