--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -71,7 +71,7 @@ jobs:
           CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
           CLUSTER_REGION: ${{ env.CLUSTER_REGION }}
         run: |
-          aws eks update-kubeconfig --name $(CLUSTER_NAME) --region $(CLUSTER_REGION)
+          aws eks update-kubeconfig --name $CLUSTER_NAME --region $CLUSTER_REGION
 
   python_build:
     runs-on: ubuntu-latest
