--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -3,46 +3,46 @@ on:
   workflow_dispatch:
 
 jobs:
-  terraform:
-    name: "Terraform"
-    runs-on: ubuntu-latest
-    env:
-      working-directory: ./terraform
-    permissions:
-      pull-requests: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  # terraform:
+  #   name: "Terraform"
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     working-directory: ./terraform
+  #   permissions:
+  #     pull-requests: write
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v1
+  #       with:
+  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Terraform Init
-        id: init
-        run: terraform init
-        working-directory: ${{ env.working-directory }}
+  #     - name: Terraform Init
+  #       id: init
+  #       run: terraform init
+  #       working-directory: ${{ env.working-directory }}
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
-        working-directory: ${{ env.working-directory }}
+  #     - name: Terraform Validate
+  #       id: validate
+  #       run: terraform validate -no-color
+  #       working-directory: ${{ env.working-directory }}
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -no-color -input=false
-        continue-on-error: true
-        working-directory: ${{ env.working-directory }}
+  #     - name: Terraform Plan
+  #       id: plan
+  #       run: terraform plan -no-color -input=false
+  #       continue-on-error: true
+  #       working-directory: ${{ env.working-directory }}
 
-      - name: Terraform Apply
-        id: apply
-        run: terraform apply -auto-approve -input=false
-        working-directory: ${{ env.working-directory }}
+  #     - name: Terraform Apply
+  #       id: apply
+  #       run: terraform apply -auto-approve -input=false
+  #       working-directory: ${{ env.working-directory }}
 
   python_tf_outputs:
     runs-on: ubuntu-latest
-    needs: terraform
+    # needs: terraform
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
@@ -75,7 +75,7 @@ jobs:
 
   python_build:
     runs-on: ubuntu-latest
-    needs: terraform
+    # needs: terraform
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
