--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -40,7 +40,7 @@ jobs:
   #       run: terraform apply -auto-approve -input=false
   #       working-directory: ${{ env.working-directory }}
 
-  python_tf_outputs:
+  python_deploy:
     runs-on: ubuntu-latest
     # needs: terraform
     steps:
@@ -57,18 +57,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: execute script
+      - name: get terraform outputs
         env:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
         run: python get_outputs.py
 
-  kube_context:
-    runs-on: ubuntu-latest
-    needs: python_tf_outputs
-    steps:
       - name: set kube context
         env: 
-          echo: ${{ env.CLUSTER_NAME }}
           CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
           CLUSTER_REGION: ${{ env.CLUSTER_REGION }}
         run: |
