--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -40,9 +40,33 @@ jobs:
   #       run: terraform apply -auto-approve -input=false
   #       working-directory: ${{ env.working-directory }}
 
-  python_deploy:
+  # python_build:
+  #   runs-on: ubuntu-latest
+  #   # needs: terraform
+  #   steps:
+  #     - name: Checkout branch
+  #       uses: actions/checkout@v3
+      
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  #     - name: Setup Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
+
+  #     - name: Build and Push
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: app
+  #         file: app/Dockerfile
+  #         push: true
+  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
+
+  kube_deploy:
     runs-on: ubuntu-latest
-    # needs: terraform
+    # needs: python_build
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
@@ -72,26 +96,9 @@ jobs:
           aws eks update-kubeconfig --name $CLUSTER_NAME --region $CLUSTER_REGION
           kubectl apply -f manifest.yaml
 
-  python_build:
-    runs-on: ubuntu-latest
-    # needs: terraform
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v3
-      
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: set cloudflare dns
+        run: |
+          HOSTNAME=kubectl get svc -n liatrio-namespace -o jsonpath='{.items[0].status.loadBalancer.ingress[0].hostname}'
+          echo "HOSTNAME=${HOSTNAME} >> $GITHUB_ENV"
 
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and Push
-        uses: docker/build-push-action@v4
-        with:
-          context: app
-          file: app/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
+        
