--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -101,6 +101,6 @@ jobs:
           kubectl apply -f manifest.yaml
 
       - name: set cloudflare dns
-        run: set_cloudflare.py
+        run: python set_cloudflare.py
 
         
