--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -116,8 +116,13 @@ jobs:
         uses: actions/setup-python@v4
         with: 
           python-version: '3.8'
-          
+
       - name: health check
         env:
           HOSTNAME: ${{ env.HOSTNAME }}
         run: python api_test.py
+
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
