--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -116,6 +116,8 @@ jobs:
         uses: actions/setup-python@v4
         with: 
           python-version: '3.8'
+          
+      - name: install python packages
         run: |
           python -m pip install --upgrade pip
           pip install requests
@@ -124,3 +126,4 @@ jobs:
         env:
           HOSTNAME: ${{ env.HOSTNAME }}
         run: python api_test.py
+
