--- a/.github/workflows/liatrio-workflow.yml
+++ b/.github/workflows/liatrio-workflow.yml
@@ -3,70 +3,70 @@ on:
   workflow_dispatch:
 
 jobs:
-  # terraform:
-  #   name: "Terraform"
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     working-directory: ./terraform
-  #   permissions:
-  #     pull-requests: write
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+  terraform:
+    name: "Terraform"
+    runs-on: ubuntu-latest
+    env:
+      working-directory: ./terraform
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1
-  #       with:
-  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-  #     - name: Terraform Init
-  #       id: init
-  #       run: terraform init
-  #       working-directory: ${{ env.working-directory }}
+      - name: Terraform Init
+        id: init
+        run: terraform init
+        working-directory: ${{ env.working-directory }}
 
-  #     - name: Terraform Validate
-  #       id: validate
-  #       run: terraform validate -no-color
-  #       working-directory: ${{ env.working-directory }}
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+        working-directory: ${{ env.working-directory }}
 
-  #     - name: Terraform Plan
-  #       id: plan
-  #       run: terraform plan -no-color -input=false
-  #       continue-on-error: true
-  #       working-directory: ${{ env.working-directory }}
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color -input=false
+        continue-on-error: true
+        working-directory: ${{ env.working-directory }}
 
-  #     - name: Terraform Apply
-  #       id: apply
-  #       run: terraform apply -auto-approve -input=false
-  #       working-directory: ${{ env.working-directory }}
+      - name: Terraform Apply
+        id: apply
+        run: terraform apply -auto-approve -input=false
+        working-directory: ${{ env.working-directory }}
 
-  # python_build:
-  #   runs-on: ubuntu-latest
-  #   # needs: terraform
-  #   steps:
-  #     - name: Checkout branch
-  #       uses: actions/checkout@v3
+  python_build:
+    runs-on: ubuntu-latest
+    needs: terraform
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v3
       
-  #     - name: Login to Docker Hub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Setup Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-  #     - name: Build and Push
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: app
-  #         file: app/Dockerfile
-  #         push: true
-  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
+      - name: Build and Push
+        uses: docker/build-push-action@v4
+        with:
+          context: app
+          file: app/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/liatrio_exercise:latest
 
   kube_deploy:
     runs-on: ubuntu-latest
-    # needs: python_build
+    needs: python_build
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -93,7 +93,6 @@ jobs:
         env: 
           CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
           CLUSTER_REGION: ${{ env.CLUSTER_REGION }}
-
         run: |
           aws eks update-kubeconfig --name $CLUSTER_NAME --region $CLUSTER_REGION
           kubectl apply -f manifest.yaml
@@ -105,7 +104,7 @@ jobs:
           DNS_RECORD: ${{ env.DNS_RECORD }}
         run: python set_cloudflare.py
 
-      - name: health check
+      - name: run health check
         env:
           HOSTNAME: ${{ env.HOSTNAME }}
         run: python api_test.py
